ecmascript/parser/tests/test262-error-references/fail/1f7f17241661662d.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/1f7f17241661662d.js:1:3
  |
1 | []=>0
  |   ^^

